--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="header">
 		<div class="logo">
-			<img src="logo.png" alt="科普知识网站">
+			<img src="Logo.png" alt="科普知识网站">
 			<h1>Technology & Ethic <br /> Wiki </h1>
 		</div>
 		<nav>
@@ -54,7 +54,7 @@
 	  <!-- 右侧区块 -->
 	  <div class="sidebar">
 	    <div class="logo">
-	      <img src="logo.png" alt="website logo">
+	      <img src="Logo.png" alt="website logo">
 	    </div>
 	    <div class="description">
 	      <h3>This website</h3>
