--- a/index3.html
+++ b/index3.html
@@ -9,7 +9,7 @@
   <!--顶部菜单栏-->
   <div class="header">
     <div class="logo">
-      <img src="logo.png" alt="科普知识网站">
+      <img src="Logo.png" alt="科普知识网站">
       <h1>Technology & Ethic <br /> Wiki </h1>
     </div>
     <nav>
